--- a/MobileApp/app/src/main/res/layout/activity_select_option.xml
+++ b/MobileApp/app/src/main/res/layout/activity_select_option.xml
@@ -28,6 +28,13 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="3. Caméra + ML"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/btn_select_camera_with_tensor" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="2. Choisir le micro"
         android:layout_marginBottom="20dp"
         android:id="@+id/btn_select_audio" />
